--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,38 +1,32 @@
-
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito"
-    
-    />
-  </head>
-  <body>
-    <div class="container">
-      <div class="circles"></div>
-      <div class="details-container">
-        <div class="avatar">
-          <img src="https://i.suar.me/l3zYA/l" class="img-fluid" alt="" />
-        </div>
-        <div class="about">
-          <div class="name">
-            <p>Hello There!</p>
-            <h1>I'm Sheika Abuthair</h1>
-          </div>
-          <div class="about-content">
-            <p>
-              Iam Also a Cricketer with big Dreams unfortunately I was not
-              successful but i hope this application will help many Cricketers to
-              Fullfill there dreams as Virat Kohli said "No cricket team in the
-              world depends on one or two players. The team always plays to win."
-            </p>
-          </div>
-        </div>
-        <div class="clear"></div>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css?family=Nunito" />
+</head>
+<body>
+  <div class="container">
+    <div class="circles"></div>
+    <div class="details-container">
+      <div class="avatar">
+        <img src="assets/images/abuthair.jpg" class="img-fluid" alt="" />
       </div>
-      <div class="skills-container">
-        <button [routerLink]="['contactus']" routerLinkActive="true">ContactUs</button>
+      <div class="about">
+        <div class="name">
+          <p>Hello There!</p>
+          <h1>I'm Sheika Abuthair</h1>
+        </div>
+        <div class="about-content">
+          <p>
+            Iam Also a Cricketer with big Dreams unfortunately I was not
+            successful but i hope this application will help many Cricketers to
+            Fullfill there dreams as Virat Kohli said "No cricket team in the
+            world depends on one or two players. The team always plays to win."
+          </p>
+        </div>
       </div>
+      <div class="clear"></div>
     </div>
-  </body>
-  
-  
+    <div class="skills-container">
+      <button [routerLink]="[]" routerLinkActive="true">ContactUs</button>
+    </div>
+  </div>
+</body>
