--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,3 @@
-
 <mat-toolbar color="primary" [ngStyle]="{ backgroundColor: 'black' }">
   <mat-toolbar-row>
     <svg
@@ -144,7 +143,7 @@
   <mat-toolbar-row>
     <span class="example-spacer"></span>
     <button mat-button routerLink="home">HOME</button>
-    <button mat-button routerLink="service">TALENTS</button>
+    <button mat-button routerLink="/service">TALENTS</button>
     <button mat-button routerLink="about">ABOUT</button>
     <button mat-button routerLink="contactus">CONTACTUS</button>
   </mat-toolbar-row>
