--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -7,7 +7,7 @@
     <div class="circles"></div>
     <div class="details-container">
       <div class="avatar">
-        <img src="assets/images/abuthair.jpg" class="img-fluid" alt="" />
+        <img src="assets/images/web/abuthair.jpg" class="img-fluid" alt="" />
       </div>
       <div class="about">
         <div class="name">
