--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -136,14 +136,13 @@
     </svg>
     <span><button mat-button routerLink="home">Dream 11</button></span>
     <span class="example-spacer"></span>
-    <button mat-raised-button routerLink="signup" class="signup">SIGNUP</button>
-    <button mat-button routerLink="login">LOGIN</button>
+    <button mat-raised-button routerLink="login" class="signup">LOGIN</button>
   </mat-toolbar-row>
 
   <mat-toolbar-row>
     <span class="example-spacer"></span>
     <button mat-button routerLink="home">HOME</button>
-    <button mat-button routerLink="/service">TALENTS</button>
+    <button mat-button routerLink="player-list">TALENTS</button>
     <button mat-button routerLink="about">ABOUT</button>
     <button mat-button routerLink="contactus">CONTACTUS</button>
   </mat-toolbar-row>
