--- a/src/app/components/contactus/contactus.component.html
+++ b/src/app/components/contactus/contactus.component.html
@@ -1,1 +1,45 @@
-<p>contactus works!</p>
+<div class="title">
+  <h1 id="title">Get in touch</h1>
+  <p id="description">
+    Please fill in the information so we can be in touch with you
+  </p>
+  <form action="contactsoon.html" method="get" id="contact-me">
+    <label>Name</label>
+    <input
+      type="text"
+      name="1name"
+      placeholder="Enter name"
+      id="name"
+      required
+    />
+    <input
+      type="email"
+      name="email"
+      placeholder="Email"
+      class="uno"
+      id="email"
+      required
+    />
+    <input
+      type="tel"
+      name="phone"
+      pattern="[0-9]{10}"
+      placeholder="+91"
+      required
+      id="phone"
+    />
+    <input
+      type="text"
+      id="teamname"
+      placeholder="Enter your Team Name"
+      class="uno"
+    />
+    <textarea
+      id="message"
+      class="textarea uno"
+      name="message"
+      placeholder="Enter your message here..."
+    ></textarea>
+    <input type="submit" value="send" id="submit" />
+  </form>
+</div>
