--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,32 @@
-<h1>Home works</h1>
+<div class="hero">
+  <div class="grid-container">
+    <div class="grid-item">
+      <div class="detail">
+        <h1>
+          Welcome to Dream11 This Application Helps You to Build Your Dream
+          <span> 🌟Team 🌟</span>
+        </h1>
+
+        <h3 id="soft">
+          "Cricket is a team game. If you want fame for yourself, go play an
+          individual game." - Gautam Gambhir
+        </h3>
+        <h2>Our Players Are Playing at</h2>
+        <div class="images">
+          <img src="assets/images/web/rcblogo.png" height="70px" width="70px" />
+          <img src="assets/images/web/milogo.png" height="70px" width="70px" />
+          <img src="assets/images/web/csklogo.png" height="70px" />
+        </div>
+      </div>
+    </div>
+    <div class="grid-item">
+      <div class="images">
+        <img
+          src="assets/images/web/homepage.png"
+          alt="King Kohli"
+          class="kohli"
+        />
+      </div>
+    </div>
+  </div>
+</div>
