--- a/src/app/modules/player/components/player-list/player-list.component.html
+++ b/src/app/modules/player/components/player-list/player-list.component.html
@@ -18,57 +18,13 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <router-outlet></router-outlet>
-
-    <ng-container *ngFor="let player of players">
-      <button class="wrapper card" (click)="showDetails(player.playerId)">
-        <!-- *** fut-player-card ***-->
-        <div class="fut-player-card">
-          <!-- Player Card Top-->
-          <div class="player-card-top">
-            <div class="player-picture">
-              <img src="{{ player.playerImg }}" draggable="false" />
-            </div>
-          </div>
-          <!-- Player Card Bottom-->
-          <div class="player-card-bottom">
-            <div class="player-info">
-              <!-- Player Name-->
-              <div class="player-name">
-                <span> {{ player.playerName }}</span>
-              </div>
-              <!-- Player Features-->
-              <div class="player-features">
-                <div class="player-features-col">
-                  <span>
-                    <div class="player-feature-title">Price:</div>
-                    <div class="player-feature-value">
-                      {{ player.basePrice | currency }}
-                    </div>
-                  </span>
-                  <span>
-                    <div class="player-feature-title">Batting:</div>
-                    <div class="player-feature-value">
-                      {{ player.batting }}
-                    </div>
-                  </span>
-                  <span>
-                    <div class="player-feature-title">Bowling:</div>
-                    <div class="player-feature-value">
-                      {{ player.bowling }}
-                    </div>
-                  </span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </button>
-    </ng-container>
-    <div class="playerList">
-      <ng-container *ngFor="let player of playerType">
+    <mat-grid-list
+      cols="3"
+      rowHeight="1:2"
+      *ngIf="players && players.length > 0"
+    >
+      <mat-grid-tile *ngFor="let player of players">
         <button class="wrapper card" (click)="showDetails(player.playerId)">
-          -->
           <!-- *** fut-player-card ***-->
           <div class="fut-player-card">
             <!-- Player Card Top-->
@@ -111,51 +67,62 @@
             </div>
           </div>
         </button>
-      </ng-container>
-    </div>
+      </mat-grid-tile>
+    </mat-grid-list>
+    <mat-grid-list
+      cols="3"
+      rowHeight="1:2"
+      *ngIf="playerType && playerType.length > 0"
+    >
+      <mat-grid-tile *ngFor="let player of playerType">
+        <div class="playerList">
+          <ng-container>
+            <button class="wrapper card" (click)="showDetails(player.playerId)">
+              <!-- *** fut-player-card ***-->
+              <div class="fut-player-card">
+                <!-- Player Card Top-->
+                <div class="player-card-top">
+                  <div class="player-picture">
+                    <img src="{{ player.playerImg }}" draggable="false" />
+                  </div>
+                </div>
+                <!-- Player Card Bottom-->
+                <div class="player-card-bottom">
+                  <div class="player-info">
+                    <!-- Player Name-->
+                    <div class="player-name">
+                      <span> {{ player.playerName }}</span>
+                    </div>
+                    <!-- Player Features-->
+                    <div class="player-features">
+                      <div class="player-features-col">
+                        <span>
+                          <div class="player-feature-title">Price:</div>
+                          <div class="player-feature-value">
+                            {{ player.basePrice | currency }}
+                          </div>
+                        </span>
+                        <span>
+                          <div class="player-feature-title">Batting:</div>
+                          <div class="player-feature-value">
+                            {{ player.batting }}
+                          </div>
+                        </span>
+                        <span>
+                          <div class="player-feature-title">Bowling:</div>
+                          <div class="player-feature-value">
+                            {{ player.bowling }}
+                          </div>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </button>
+          </ng-container>
+        </div>
+      </mat-grid-tile>
+    </mat-grid-list>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
-<!-- <ng-container *ngFor="let player of players">
-  <button class="wrapper" (click)="showDetails(player.playerId)"> -->
-<!-- *** fut-player-card ***-->
-<!-- <div class="fut-player-card"> -->
--->
-<!-- Player Card Top-->
-<!-- 
-      <div class="player-card-top">
-        <div class="player-picture"> -->
-<!-- <img src="{{ player.playerImg }}" draggable="false" />
-        </div>
-      </div> -->
-<!-- Player Card Bottom-->
-<!-- <div class="player-card-bottom">
-        <div class="player-info"> -->
-<!-- Player Name -->
-<!-- <div class="player-name">
-            <span> {{ player.playerName }}</span>
-          </div> -->
-<!-- Player Features -->
-<!-- <div class="player-features">
-            <div class="player-features-col">
-              <span>
-                <div class="player-feature-title">Price:</div>
-                <div class="player-feature-value">
-                  {{ player.basePrice | currency }}
-                </div>
-              </span>
-              <span>
-                <div class="player-feature-title">Batting:</div>
-                <div class="player-feature-value">{{ player.batting }}</div>
-              </span>
-              <span>
-                <div class="player-feature-title">Bowling:</div>
-                <div class="player-feature-value">{{ player.bowling }}</div>
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </button>
-</ng-container> -->
