--- a/src/app/modules/player/components/player-list/player-list.component.css
+++ b/src/app/modules/player/components/player-list/player-list.component.css
@@ -12,9 +12,8 @@ body:after {
   right: 20px;
   z-index: 2;
 }
-.sidenav-container{
+.sidenav-container {
   width: 200px;
-  
 }
 .wrapper {
   position: relative;
@@ -26,7 +25,6 @@ body:after {
   height: 100vh;
   min-height: 500px;
 }
-/* *** fut-player-card styles *** */
 .fut-player-card {
   position: relative;
   width: 390px;
@@ -43,7 +41,6 @@ body:after {
 .fut-player-card .player-card-top {
   position: relative;
   display: flex;
-  color: #e9cc74;
   padding: 0 1.5rem;
 }
 .fut-player-card .player-card-top .player-master-info {
@@ -122,14 +119,15 @@ body:after {
   width: 90%;
   margin: 0 auto;
   height: auto;
-  position: relative;
-  z-index: 2;
+  position: absolute;
+
+  z-index: 1;
 }
 .fut-player-card .player-card-bottom .player-info .player-name {
   width: 100%;
   display: block;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   text-transform: uppercase;
   border-bottom: 2px solid rgba(233, 204, 116, 0.1);
   padding-bottom: 0.3rem;
@@ -177,6 +175,8 @@ body:after {
   margin-right: 0.3rem;
   font-weight: 700;
   color: rgb(192, 231, 114);
+  display: flex;
+  flex-direction: column;
 }
 .fut-player-card
   .player-card-bottom
@@ -193,4 +193,18 @@ body:after {
   .player-features
   .player-features-col:last-child {
   border: 0;
+}
+.grid-container {
+  display: grid;
+  justify-content: space-evenly;
+  flex-wrap: nowrap;
+  flex: wrap;
+  flex: wrap-reverse;
+}
+.grid-item {
+  font-size: 30px;
+  text-align: center;
+}
+mat-grid-tile {
+  background: transparent;
 }
