finish auth guard

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -26,7 +26,7 @@
       <div class="clear"></div>
     </div>
     <div class="skills-container">
-      <button [routerLink]="[]" routerLinkActive="true">ContactUs</button>
+      <button [routerLink]="['/contactus']">ContactUs</button>
     </div>
   </div>
 </body>
