--- a/src/app/components/contactus/contactus.component.html
+++ b/src/app/components/contactus/contactus.component.html
@@ -40,6 +40,6 @@
       name="message"
       placeholder="Enter your message here..."
     ></textarea>
-    <input type="submit" value="send" id="submit" />
+    <input type="submit" routerLink="/contactsoon" value="send" id="submit" />
   </form>
 </div>
