--- a/src/app/modules/player/components/player-details/player-details.component.css
+++ b/src/app/modules/player/components/player-details/player-details.component.css
@@ -222,3 +222,8 @@ body:after {
   padding: 30px;
   font-size: 30px;
 }
+button {
+  display: flex;
+  align-content: space-between;
+  justify-content: space-around;
+}
