--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -139,11 +139,12 @@
     <button mat-raised-button routerLink="login" class="signup">LOGIN</button>
   </mat-toolbar-row>
 
-  <mat-toolbar-row>
+  <mat-toolbar-row class="sec2">
     <span class="example-spacer"></span>
     <button mat-button routerLink="home">HOME</button>
     <button mat-button routerLink="player-list">TALENTS</button>
+    <button mat-button routerLink="show-signing">Signing List</button>
     <button mat-button routerLink="about">ABOUT</button>
-    <button mat-button routerLink="contactus">CONTACTUS</button>
+    <button mat-button routerLink="contactus">CONTACT US</button>
   </mat-toolbar-row>
 </mat-toolbar>
