--- a/src/app/modules/player/components/show-signing/show-signing.component.html
+++ b/src/app/modules/player/components/show-signing/show-signing.component.html
@@ -1,30 +1,28 @@
-<p>show-signing works!</p>
-<table mat-table  class="mat-elevation-z8">
-  <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
-  <!-- Position Column -->
+<div *ngFor="let signing of signings">
+  {{ signing | json }}
+</div>
+<table mat-table class="mat-elevation-z8" *ngFor="let signing of signings">
   <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+    <th mat-header-cell *matHeaderCellDef>Signing Id.</th>
+    <td mat-cell *matCellDef="let signing">{{ signing.signingId }}</td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+  <ng-container matColumnDef="teamId">
+    <th mat-header-cell *matHeaderCellDef>Team Id</th>
+    <td mat-cell *matCellDef="let signing">{{ signing.teamId }}</td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef>Weight</th>
-    <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef>Price</th>
+    <td mat-cell *matCellDef="let signing">{{ signing.price }}</td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef>Symbol</th>
-    <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+  <ng-container matColumnDef="season">
+    <th mat-header-cell *matHeaderCellDef>Season</th>
+    <td mat-cell *matCellDef="let signing">{{ signing.season }}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
