--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
       <div class="detail">
         <h1>
           Welcome to Dream11 This Application Helps You to Build Your Dream
-          <span> 🌟Team 🌟</span>
+          <span> Team </span>
         </h1>
 
         <h3 id="soft">
