--- a/src/app/modules/player/components/player-details/player-details.component.css
+++ b/src/app/modules/player/components/player-details/player-details.component.css
@@ -225,5 +225,5 @@ body:after {
 button {
   display: flex;
   align-content: space-between;
-  justify-content: space-around;
+  justify-content: center;
 }
