--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -7,7 +7,7 @@
 .hero {
   position: relative;
   width: auto;
-  height: auto;
+  height: 100%;
   background-color: antiquewhite;
 }
 
@@ -17,14 +17,17 @@
 }
 .detail h1 {
   font-size: 20px;
-  font-family: "Ceviche One", cursive;
-  font-family: "Lavishly Yours", cursive;
+  font-family: "Pacifico", cursive;
+  font-family: "Roboto", sans-serif;
   color: black;
   margin-bottom: 20px;
 }
 span {
   color: red;
-  font-family: "Ceviche One", cursive;
+  font-family: "League Gothic", sans-serif;
+  font-family: "Pacifico", cursive;
+  font-family: "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .grid-container {
@@ -44,13 +47,15 @@ span {
   padding-left: 40px;
 }
 #soft {
-  font-family: "Lavishly Yours", cursive;
+  font-family: "League Gothic", sans-serif;
+  font-family: "Pacifico", cursive;
+  font-family: "Roboto", sans-serif;
   color: blue;
-  font-size: 18px;
+  font-size: 15.5px;
   padding-top: 30px;
   display: flex;
 }
 .image {
-  height: 20px;
-  width: 20px;
+  height: 50px;
+  width: 50px;
 }
