--- a/src/app/modules/player/components/show-signing/show-signing.component.html
+++ b/src/app/modules/player/components/show-signing/show-signing.component.html
@@ -1,30 +1,41 @@
-<div *ngFor="let signing of signings">
+<!-- <div *ngFor="let signing of signings">
   {{ signing | json }}
-</div>
-<table mat-table class="mat-elevation-z8" *ngFor="let signing of signings">
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef>Signing Id.</th>
-    <td mat-cell *matCellDef="let signing">{{ signing.signingId }}</td>
-  </ng-container>
-
-  <!-- Name Column -->
-  <ng-container matColumnDef="teamId">
-    <th mat-header-cell *matHeaderCellDef>Team Id</th>
-    <td mat-cell *matCellDef="let signing">{{ signing.teamId }}</td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef>Price</th>
-    <td mat-cell *matCellDef="let signing">{{ signing.price }}</td>
-  </ng-container>
-
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="season">
-    <th mat-header-cell *matHeaderCellDef>Season</th>
-    <td mat-cell *matCellDef="let signing">{{ signing.season }}</td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</div> -->
+<!-- <table>
+  <div>
+    <tr>
+      <th>SigningId</th>
+      <th>PlayerId</th>
+      <th>Price</th>
+      <th>teamId</th>
+      <th>Season</th>
+    </tr>
+    <tr *ngFor="let signing of signings">
+      <td>{{ signing.signingId }}</td>
+      <td>{{ signing.player.playerId }}</td>
+      <td>{{ signing.price }}</td>
+      <td>{{ signing.teamId }}</td>
+      <td>{{ signing.season }}</td>
+    </tr>
+  </div>
+</table> -->
+<table class="table">
+  <thead>
+    <tr>
+      <th>SigningId</th>
+      <th>PlayerId</th>
+      <th>Price</th>
+      <th>teamId</th>
+      <th>Season</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let signing of signings">
+      <td>{{ signing.signingId }}</td>
+      <td>{{ signing.player.playerId }}</td>
+      <td>{{ signing.price }}</td>
+      <td>{{ signing.teamId }}</td>
+      <td>{{ signing.season }}</td>
+    </tr>
+  </tbody>
 </table>
